# sga-close-path

./: README.md
src/: .gitignore  Makefile.am  README  configure.ac  configureCMD.txt
src/Algorithm/: StatsProcess.cpp  StatsProcess.h
src/Bigraph/: Bigraph.cpp  Bigraph.h  GraphCommon.h  Vertex.cpp  Vertex.h
src/Concurrency/: Makefile.am  ProcessFramework.h  ProcessFramework2.h  ThreadBase.h  ThreadWorker.h
src/GraphSearch/: EdgeGenerator.cpp  EdgeGenerator.h  Makefile  Makefile.am  PCSearch.cpp  PCSearch.h  README.txt  Subgraph.cpp  Subgraph.h  astatReader.cpp  astatReader.h  bundle.cpp  bundle.h  bundleManager.cpp  bundleManager.h  bundleReader.cpp  bundleReader.h  closePathProcess.cpp  closePathProcess.h  closure.cpp  closure.h  closureGraph.h  contigMerger.cpp  contigMerger.h  dfs.cpp  dfs.h  edgeGenerator.cpp  edgeGenerator.h  edgeTracker.cpp  edgeTracker.h  overlapFinder.cpp  overlapFinder.h  pathCounter.cpp  pathCounter.h  subgraph.cpp  subgraph.h
src/SGA/: Makefile.am  assemble.cpp  close-path.cpp  close-path.h  graph-stats.cpp  graphStats.cpp  graphStats.h  scaffold.cpp  scaffold2fasta.cpp  sga.cpp  stats.cpp
src/Scaffold/: ScaffoldLink.h  ScaffoldRecord.cpp  ScaffoldRecord.h  ScaffoldSearch.cpp  ScaffoldSearch.h  ScaffoldSequenceCollection.cpp  ScaffoldVertex.h  ScaffoldVisitors.cpp  ScaffoldVisitors.h  ScaffoldWalk.cpp  ScaffoldWalk.h
src/StringGraph/: GraphSearchTree.h  SGAlgorithms.cpp  SGAlgorithms.h  SGSearch.cpp  SGSearch.h  SGVisitors.cpp  SGVisitors.h  SGWalk.cpp  SGWalk.h  WalkBuilder.h
src/TEST/: Makefile  Makefile.am  ThreadDummy.h  ThreadDummyTest.cpp  U00096.perfectCov.pp.filter.pass.fmmerged40.alignments.bundles  assemble.K27.X2.m70-contigs.alignments.bundles  assemble.K27.X2.m70.bundles  assemblyGraphToDot_ver2.py  getSizes.cpp  helloWorld  helloWorld.cpp  histogram.py  investigateSam.py  makeBundles.py  repetative.bundles  summarizeBundleClosures.py  testGraphSearch.cpp  testHashMap.cpp  testMapParallel.cpp  testUtils.cpp  testUtils.h  trouble.bundles
src/TEST/GraphSearch/: EdgeGenerator.h
src/Util/: Allocator.h  BoostAllocator.h  HashMap.h  SimpleAllocator.h  SimplePool.h
