noinst_LIBRARIES = libgraphsearch.a 

libgraphsearch_a_CPPFLAGS = \
    -I$(top_srcdir)/Util \
    -I$(top_srcdir)/Bigraph \
    -I$(top_srcdir)/SuffixTools \
    -I$(top_srcdir)/StringGraph \
    -I$(top_srcdir)/Concurrency \
    -I$(top_srcdir)/Algorithm \
    -I$(top_srcdir)/SQG \
    -I$(top_srcdir)/Scaffold \
    -I$(top_srcdir)/GraphDiff \
    -I$(top_srcdir)/Thirdparty

libgraphsearch_a_SOURCES = \
   EdgeGenerator.h EdgeGenerator.cpp \
   Subgraph.h Subgraph.cpp

