noinst_LIBRARIES = libgraphsearch.a 

libgraphsearch_a_CPPFLAGS = \
    -I$(top_srcdir)/Util \
    -I$(top_srcdir)/Bigraph \
    -I$(top_srcdir)/SuffixTools \
    -I$(top_srcdir)/StringGraph \
    -I$(top_srcdir)/Concurrency \
    -I$(top_srcdir)/Algorithm \
    -I$(top_srcdir)/SQG \
    -I$(top_srcdir)/Scaffold \
    -I$(top_srcdir)/GraphDiff \
    -I$(top_srcdir)/Thirdparty

libgraphsearch_a_SOURCES = \
   edgeGenerator.h edgeGenerator.cpp \
   subgraph.h subgraph.cpp \
   PCSearch.h PCSearch.cpp \
   bundle.h bundle.cpp \
   bundleReader.h bundleReader.cpp \
   edgeTracker.h edgeTracker.cpp \
   closePathProcess.h closePathProcess.cpp \
   overlapFinder.h overlapFinder.cpp \
   closure.h closure.cpp \
   dfs.h dfs.cpp
#   bundleManager.h bundleManager.cpp
